support for batch ssis scripts because they aren't valid SQL

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "db-migrate-mssql",
-    "version": "2.0.0",
-    "description": "A mssql driver for db-migrate",
+    "name": "db-migrate-mssql-ssis",
+    "version": "0.0.1",
+    "description": "A mssql driver for db-migrate that supports SSIS scripts",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/ryd0rz/db-migrate-mssql.git"
+        "url": "https://github.com/andyjones/db-migrate-mssql-ssis.git"
     },
     "keywords": [
         "db-migrate",
@@ -21,19 +21,20 @@
         "migrator",
         "driver"
     ],
-    "author": "ryd0rz",
+    "author": "andyjones",
     "contributors": [
-        "christiaanwesterbeek"
+        "duncan9562",
+        "christiaanwesterbeek",
+        "ryd0rz"
     ],
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/ryd0rz/db-migrate-mssql/issues"
+        "url": "https://github.com/andyjones/db-migrate-mssql-ssis/issues"
     },
-    "homepage": "https://github.com/ryd0rz/db-migrate-mssql",
+    "homepage": "https://github.com/andyjones/db-migrate-mssql-ssis",
     "dependencies": {
-        "bluebird": "^3.5.4",
-        "db-migrate-base": "^1.6.3",
-        "mssql": "6.0.0-beta.1"
+        "db-migrate-mssql": "^2.1.0",
+        "bluebird": "^3.5.4"
     },
     "devDependencies": {
         "db-meta": "^0.5.1",
@@ -43,6 +44,7 @@
         "eslint-plugin-import": "2.17.0",
         "eslint-plugin-node": "8.0.1",
         "eslint-plugin-promise": "4.1.1",
-        "eslint-plugin-standard": "4.0.0"
+        "eslint-plugin-standard": "4.0.0",
+        "prettier": "^2.1.2"
     }
 }
