--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A mssql driver for db-migrate that supports SSIS scripts",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "lab --leaks"
     },
     "repository": {
         "type": "git",
@@ -45,6 +45,8 @@
         "eslint-plugin-node": "8.0.1",
         "eslint-plugin-promise": "4.1.1",
         "eslint-plugin-standard": "4.0.0",
-        "prettier": "^2.1.2"
+        "prettier": "^2.1.2",
+        "@hapi/code": "5.x",
+        "@hapi/lab": "18.x"
     }
 }
